app/frontend/packs/styles/components/_images.scss
@use '../base/mixins' as *;

.profile-image {
  position: relative;
  width: 50%;

  &.about {
    float: right;
  }

  &.admin {
    max-width: 300px;
    width: 100%;
  }
}

.logo-link {
  position: relative;


  img {
    height: 40px;
    width: 40px;
  }
}

.project-image.admin {
  height: 250px;
  object-fit: contain;
  width: 300px;
}

